--- a/asset/css/shop.css
+++ b/asset/css/shop.css
@@ -104,7 +104,7 @@ table tr:nth-child(even){
 .content{
 	position: relative;
 	margin: 0 auto;
-	min-width: 900px;
+	min-width: 1000px;
 	width: 90vw;
 	padding: 1em;
 	height: auto;
@@ -593,6 +593,55 @@ table tr:nth-child(even){
 .hide-ptype-form form{
 	line-height: 2.3em;
 	font-size: 1em;
+}
+.index-post{
+	position: relative;
+	display: inline-block;
+	margin-right: 0.2em;
+	top: 0.5em;
+	min-width: 200px;
+	width: 20%;
+	padding: 0.8em 1.5em;
+	height: 6em;
+	border-radius: 1em;
+	color: white;
+}
+.index-post label{
+	position: relative;
+	/*padding: 0 0.5em;*/
+	font-size: 1.2em;
+}
+.post-icon{
+	position: relative;
+	top: 1em; 
+	width: 6em; 
+	height: 6em;
+	text-align: center;
+}
+.post-content{
+	position: relative;
+	float: right;
+	top: -5.5em;
+	width: 7.5em;
+	/*background-color: red;*/
+}
+.post-content label{
+	font-weight: 800;
+}
+.post-content font{
+	font-size: 2.5em;
+}
+.post-red{
+	background-color: #ce0000;
+}
+.post-green{
+	background-color: #00bb00;
+}
+.post-blue{
+	background-color: #0072e3;
+}
+.post-yellow{
+	background-color: #FFA200;
 }
 /*---------------------------*/
 button a{
